[package]
name = "tomatui"
version = "0.1.0"
description = "A Pomodoro timer in terminal"
authors = ["sudeeptarlekar <sudeeptarlekar@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
future-utils = "0.12"
ratatui = "0.29.0"
reqwest = { version = "0.12", features = ["stream"] }
rodio = "0.21"
tokio = { version = "1.46", features = ["full"] }
